src/test/ui/enum/enum-variant-type-2.stderr
error[E0573]: expected type, found variant `Foo::Bar`
  --> $DIR/enum-variant-type-2.rs:7:11
   |
LL | fn foo(x: Foo::Bar) {}
   |           ^^^^^^^^
   |           |
   |           not a type
   |           help: try using the variant's enum: `Foo`

error: aborting due to previous error

